--- a/css/our_work_style.css
+++ b/css/our_work_style.css
@@ -706,10 +706,14 @@ a {
    SOCIAL MEDIA & STORY Project Styles
    =========================== */
 
+
+   .project-section.social-project {
+    margin-top: -30vh;
+   }
+
 /* --- Common Styles for Both Sections --- */
 .social-project,
 .story-project {
-    margin-top: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -719,7 +723,7 @@ a {
 .social-title,
 .story-title {
     text-align: center;
-    margin-bottom: 60px;
+    margin-bottom: 120px;
 }
 
 .social-title h1,
